[project]
name = "liminal-training"
version = "0.1.0"
description = "Self-contained repository for liminal learning experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["sl", "sl.external", "sl.llm", "sl.core", "sl.utils", "sl.evaluation"]
package-dir = {"sl" = "sl"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
training = [
    "unsloth[colab-new]>=2024.11.0",
    "bitsandbytes>=0.43.0",
]
